--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ div {
 
 .wrapper {
 	display: grid;
-	grid-template-rows: 10vh 90vh 100vh 100vh 100vh;
+	grid-template-rows: 100vh 100vh 100vh 100vh;
 }
 
 /* nav {
