--- a/main.css
+++ b/main.css
@@ -32,19 +32,20 @@ div {
 } */
 
 header {
+	display: flex;
+	justify-content: flex-end;
     font-size: 1.4rem;
     padding: 0.8em;
-    grid-template-rows: 1fr;
     position: fixed;
     z-index: 1;
     background: linear-gradient(#FFF 60%, #FFFFFF00);
-    display: flex;
-    width: 100%;
+	width: 100%;
 }
 
 .navlist {
 	display: flex;
 	justify-content: space-between;
+	flex: 1 1 0;
 }
 
 .nav_list-item {
@@ -211,7 +212,6 @@ a:hover {
 	.navlist {
 		display: flex;
 		justify-content: space-between;
-		flex: 1 1 0;
 	}
 
 	#nav-buttons {
