keeping content below the header

--- a/main.css
+++ b/main.css
@@ -22,7 +22,9 @@ div {
 
 .wrapper {
 	display: grid;
-	grid-template-rows: 100vh 100vh 100vh 100vh;
+    grid-template-rows: 100vh 100vh 100vh 100vh;
+    position: absolute;
+    top: 6rem;
 }
 
 /* nav {
