--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ header {
 
 section {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	min-height: 100vh;
 	position: relative;
@@ -193,10 +194,10 @@ a:hover {
 	margin: 4rem;
 }
 .projects-container {
-	padding-left: 10px;
+	padding-top: 20px;
 	display: grid;
 	grid-column-gap: 3em;
-	grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	align-items: center;
 	margin: 1rem;
 }
@@ -207,7 +208,7 @@ a:hover {
 }
 .project-link-img {
 	height: 100%;
-	width: 40%;
+	width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
