--- a/main.css
+++ b/main.css
@@ -231,6 +231,14 @@ a:hover {
 	}
 }
 
+#footer {
+	
+    display: flex;
+    flex-direction: column;
+    padding-left: 10rem;
+
+}
+
 @media only screen and (min-width: 968px) {
 	#intro {
 		display: flex;
